# lgm-prices

./: .gitignore  .pylintrc  CHANGELOG.md  README.md  pyproject.toml
aws_lambda/functions/get_card/: app.py  requirements.txt
aws_lambda/scripts/: deploy.sh
frontend/src/: App.js
frontend/src/components/: Buylist.js
lambda/: README.md  template.yml
lambda/functions/get_card/: Dockerfile  requirements.txt
lambda/scripts/: build.sh  deploy.sh
lgm_prices/: card.py  image.py  marketplace.py  utils.py
web/: package.json
web/src/components/: Navbar.js
